CocacolaProject/src/objects/HR_Primary_Evaluators__c.object
<CustomObject>
    <fields>
        <fullName>Affiliation_End_Year__c</fullName>
        <label>所属（中間）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Middle__c</fullName>
        <label>所属（期末）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>申請者氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>申請者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Basis_Of_The_Evaluation__c</fullName>
        <label>評価の根拠等</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Assessment_How__c</fullName>
        <label>最終_評価/How</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Assessment_Total__c</fullName>
        <label>最終_評価/総合</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Assessment_What__c</fullName>
        <label>最終_評価/What</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Comment__c</fullName>
        <label>最終評価者コメント</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事評価申請者</label>
        <referenceTo>HR_Target__c</referenceTo>
        <relationshipLabel>人事評価</relationshipLabel>
        <relationshipName>HR_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Comment_Middle__c</fullName>
        <label>一次評価者コメント（中間）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Comment_Year_End__c</fullName>
        <label>一次評価者コメント（期末）</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Day_Middle__c</fullName>
        <label>面接日（中間）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Day_Year_End__c</fullName>
        <label>面接日（期末）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Day__c</fullName>
        <label>面接日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name_End_Year__c</fullName>
        <label>面接者氏名（期末）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name_Middle__c</fullName>
        <label>面接者氏名（中間）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <label>面接者氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>マネージャー</label>
        <referenceTo>HR_Primary_Evaluators__c</referenceTo>
        <relationshipLabel>人事評価</relationshipLabel>
        <relationshipName>Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_How__c</fullName>
        <label>一次_評価/How</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank1__c</fullName>
        <label>一次評価ランク1</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank2__c</fullName>
        <label>一次評価ランク2</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Rank3__c</fullName>
        <label>一次評価ランク3</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_Total__c</fullName>
        <label>一次_評価/総合</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Assessment_What__c</fullName>
        <label>一次_評価/What</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Comment__c</fullName>
        <label>一次評価者コメント</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Evaluators_Name1__c</fullName>
        <label>一次評価者氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Evaluators_Name2__c</fullName>
        <label>一次評価者氏名2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Evaluators_Name3__c</fullName>
        <label>一次評価者氏名3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Evaluators_Name_Agent__c</fullName>
        <label>一次評価者氏名(代理)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Assessment_How__c</fullName>
        <label>二次_評価/How</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Assessment_Total__c</fullName>
        <label>二次_評価/総合</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Assessment_What__c</fullName>
        <label>二次_評価/What</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Comment__c</fullName>
        <label>二次評価者コメント</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Evaluators_Name__c</fullName>
        <label>二次評価者氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Desk_Contact__c</fullName>
        <label>サポートデスク連絡先</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>部署</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>人事評価</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>HR一次評価者名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Mgr_Manager</fullName>
        <active>true</active>
        <label>リーダーマネージャー</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Mgr_Manager</fullName>
        <active>true</active>
        <label>一般ユーザーマネージャー</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>